deallo/css/stylesheet.css
/*Default background: #42bbb1
  Active background: #b2dfdd
  Default color: #ecf0f1
  Active color: #2f8e86
*/

/*--- Custom Navigation bar ---*/
.navbar-default {
    background-color: #42bbb1;
    border-color: #b2dfdd;
}

/*Navigation bar brand*/
.navbar-default .navbar-brand {
    color: #ecf0f1;
}

/*Navigation bar navigation items*/
.navbar-default .navbar-nav > li > a {
    color: #ecf0f1;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #2f8e86;
}

.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
    color: #2f8e86;
    background-color: #b2dfdd;
}

/*Navigation bar icon in xs devices*/
.navbar-default .navbar-toggle {
    border-color: #b2dfdd;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #b2dfdd;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #ecf0f1;
}

.navbar-default .navbar-collapse {
    border-color: #ecf0f1;
}

.navbar-default .navbar-link:hover {
    color: #2f8e86;
}

/*For dropdown menu in xs devices*/
@media (max-width: 767px) { 
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: #ecf0f1;
    }

    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
        color: #2f8e86;
    }
    
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
    .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
        color: #2f8e86;
        background-color: #b2dfdd;
    }
}


/*--- Body ---*/
#myCarousel {
	margin-top: -20px;
}

.category-img {
	width: 100%;
}

.jumbotron {
    background-image: url(../images/banner2.jpeg);
    background-size: cover;
    background-repeat: no-repeat;
    margin-top: -20px;
    height: 400px;
    text-align: center;
}

.jumbotron div {
    margin-top: 50px;   
}

.jumbotron h1 {
    color: #89bcb9;
    -webkit-text-stroke: 1px #97c9c6;
}

.jumbotron p {
    color: white;
    -webkit-text-stroke: 1px white;
}

.jumbotron button {
    color: black;
}

.container {
    padding: 10px 15px;
}

div.glyphicon {
    font-size: 50px;
    margin-bottom: 20px;
    margin-top: 20px;
}

/*-- Login page --*/

body#loginpg {
    background-image: url(../images/loginBackg.jpg);
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#login {
    margin-top: 90px;
    background-color: white;
    padding: 50px 25px;
    border-radius: 9px;
}

#loginBtn {
    background-color: #42bbb1;
    color: white;
    border-color: white;
}

#loginBtn:hover {
    background-color: #2f8e86;
}

/*-- Image upload --*/
.uploadedImg {
    width: 200px;
    margin: 2px;
    float: left;
}

.productImg {
	width: 200px;
	margin: 2px;
}

/*-- Product list / My products page #42bbb1--*/
.square {
	height: 200px;
	line-height: 200px;
}

.productBtn {
	background-color: #31ABA6;
    color: white;
    border-color: white;
}

.productBtn:hover {
    background-color: #2f8e86;
	color: white;
}

.btnPadding {
	padding: 18px;
	
}

.img-upload input[type=file] {
    position: absolute;
    top: 0;
    right: 0;
    margin: 0;
    padding: 0;
    cursor: pointer;
    opacity: 0;
}

/*--- Seller: View customer order (customerorders.php)---*/
.ordertable {
	border: 1px solid #ddd;
}

.status-td {
	border-left: 1px solid #ddd;
	border-right: 1px solid #ddd;
}

/*--- Product Details ---*/

.product{
	border: 1px solid #dddddd;
	height: 321px;
}

.product>img{
	max-width: 230px;
}

.product-rating{
	font-size: 20px;
	margin-bottom: 25px;
}

.product-title{
	font-size: 20px;
}

.product-desc{
	font-size: 14px;
}

.product-price{
	font-size: 22px;
}

.product-stock{
	color: #74DF00;
	font-size: 20px;
	margin-top: 10px;
}

.product-info{
		margin-top: 50px;
}

.content-wrapper {
	max-width: 1140px;
	background: #fff;
	margin: 0 auto;
	margin-top: 25px;
	margin-bottom: 10px;
	border: 0px;
	border-radius: 0px;
}

.view-wrapper {
	float: right;
	max-width: 70%;
	margin-top: 25px;
}

.product-container {
	padding-left: 0px;
	padding-right: 0px;
	max-width: 100%;
}

.service1-items {
	padding: 0px 0 0px 0;
	float: left;
	position: relative;
	overflow: hidden;
	max-width: 100%;
	height: 321px;
	width: 130px;
}

.service1-item {
	height: 107px;
	width: 120px;
	display: block;
	float: left;
	position: relative;
	/*padding-right: 20px;*/
	border-right: 1px solid #DDD;
	border-top: 1px solid #DDD;
	border-bottom: 1px solid #DDD;
}

.service1-item > img {
	max-height: 110px;
	max-width: 110px;
	opacity: 0.6;
	transition: all .2s ease-in;
	-o-transition: all .2s ease-in;
	-moz-transition: all .2s ease-in;
	-webkit-transition: all .2s ease-in;
}

.service1-item > img:hover {
	cursor: pointer;
	opacity: 1;
}

.service-image-left {
	padding-right: 50px;
}

.service-image-right {
	padding-left: 50px;
}

.service-image-left > center > img,.service-image-right > center > img{
	max-height: 155px;
}

/*--- Star rating ---*/

.rating { 
  border: none;
  display: inline-block;
  /*float: left;*/
}

.rating > input { display: none; } 
.rating > label:before { 
  margin: 5px;
  font-size: 1.25em;
  font-family: FontAwesome;
  display: inline-block;
  content: "\f005";
}

.rating > .half:before { 
  content: "\f089";
  position: absolute;
}

.rating > label { 
  color: #ddd; 
 float: right; 
}

/***** CSS Magic to Highlight Stars on Hover *****/

.rating > input:checked ~ label, /* show gold star when clicked */
.rating:not(:checked) > label:hover, /* hover current star */
.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */



.rating > input:checked + label:hover, /* hover current star when changing rating */
.rating > input:checked ~ label:hover,
.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
.rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 

/*--- checkoutdetails.php ---*/
#checkoutcancel{
        display: inline-block;
}

#paypal-button-container{
        display: inline-block;
        vertical-align:top;
}
/*--- Footer ---*/
body {
    /* Set margin bottom according to the height of footer to prevent overlapping */
    margin-bottom: 110px;
}

html {
    /*Set the height of the html to be 100% of browser window*/
    min-height: 100%;
    position: relative;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 100px;
    line-height: 20px; /* Vertically center the text there */
    background-color: #2f8e86;
    padding-top: 20px;
}

.footer a{
    color: #ecf0f1;
}


.copyright {
    font-size: 12px;
}

